tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/consistent-hash/tcp_source_ip_b/_test_context/Service-DestinationRule.3060342442.yaml
apiVersion: v1
kind: Service
metadata:
  name: consistent-hash
  namespace: echo-2-20468
spec:
  ports:
  - name: http
    port: 80
    targetPort: 18080
  - name: tcp
    port: 9090
    targetPort: 19090
  selector:
    test.istio.io/class: standard
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: consistent-hash
  namespace: echo-2-20468
spec:
  host: consistent-hash
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
